-Author Arthur Aghajanyan
        -Updated mentioned mistakes

--- a/Arthur_Aghajanyan/Bootstrap/page.html
+++ b/Arthur_Aghajanyan/Bootstrap/page.html
@@ -45,19 +45,20 @@
 
         <!--Second part-->
         <div class="jumbotron jumbotron-fluid">
-            <div class="container row ">
-                <div class="col-sm-2"></div>
-                <div class="row col-sm-10">
-                    <div class="col-md-6 order-md-12">
-                        <img src="other/photo1.png" class="mt-5" alt="Notebook" width="354" height="224">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="row">
+                        <div class="col-md-6 order-md-12">
+                            <img src="other/photo1.png" class="img-fluid mt-5" alt="Notebook" >
+                        </div>
+                            <div class="col-md-6 order-md-1">
+                                <h2 class="text">Bootstrap 101 template</h2>
+                                <p class="text">Proident eu nisi commodo enim ddeserunt enim duis sunt nostrud anim.Sunt do sit enim veniam nostrud culpa adipisicing do ullamco occaecat et.</p>
+                                <a class="btn btn-primary btn-sm" href="#" role="button">Discover more</a>
+                                <a class="btn btn-outline-info btn-sm" href="#" role="button">Some another action</a>
+                            </div>
                     </div>
-                    <div class="col-md-6 order-md-1">
-                        <h2 class="text">Bootstrap 101 template</h2>
-                        <p class="text">Proident eu nisi commodo enim ddeserunt enim duis sunt nostrud anim.Sunt do sit enim veniam nostrud culpa adipisicing do ullamco occaecat et.</p>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">Discover more</a>
-                        <a class="btn btn-outline-info btn-sm" href="#" role="button">Some another action</a>
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -70,59 +71,63 @@
         </div>
 
         <!--Icon part-->
-        <div class="container row d-flex">
-            <div class="col-sm-2"></div>
-            <div class="row col-sm-10">
-                <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-magic-wand my-3"><use xlink:href="#lnr-magic-wand"></use></svg>
-                    <p class="text">Ex cupiatat eu</p>
-                    <p class="text-secondary">Ex cupidatat eu official consequat incididunt labore occaecat ut veniam labore et cillum id et.</p>
-                </div>
-                <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-heart my-3"><use xlink:href="#lnr-heart"></use></svg>
-                    <p class="text">Tempor aute occaecat</p>
-                    <p class="text-secondary">Tempor aute occaecat pariatur esse aute amet.</p>
-                </div>
-                <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-rocket my-3"><use xlink:href="#lnr-rocket"></use></svg>
-                    <p class="text">Voluptate ex irure</p>
-                    <p class="text-secondary">Voluptate ex irure ipsum ipsum ullamco ipsum reprehenderit non ut mollit commodo.</p>
-                </div>
+        <div class="container d-flex">
+            <div class="row">
+                <div class="col-sm-2"></div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-magic-wand my-3"><use xlink:href="#lnr-magic-wand"></use></svg>
+                        <p class="text">Ex cupiatat eu</p>
+                        <p class="text-secondary">Ex cupidatat eu official consequat incididunt labore occaecat ut veniam labore et cillum id et.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-heart my-3"><use xlink:href="#lnr-heart"></use></svg>
+                        <p class="text">Tempor aute occaecat</p>
+                        <p class="text-secondary">Tempor aute occaecat pariatur esse aute amet.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-rocket my-3"><use xlink:href="#lnr-rocket"></use></svg>
+                        <p class="text">Voluptate ex irure</p>
+                        <p class="text-secondary">Voluptate ex irure ipsum ipsum ullamco ipsum reprehenderit non ut mollit commodo.</p>
+                    </div>
 
-                <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-paperclip my-3"><use xlink:href="#lnr-paperclip"></use></svg>
-                    <p class="text">Ex cupiatat eu</p>
-                    <p class="text-secondary">Ex cupidatat eu official consequat incididunt labore occaecat ut veniam labore et cillum id et.</p>
-                </div>
-                <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-screen my-3"><use xlink:href="#lnr-screen"></use></svg>
-                    <p class="text">Tempor aute occaecat</p>
-                    <p class="text-secondary">Tempor aute occaecat pariatur esse aute amet.</p>
-                </div>
-                <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-inbox my-3"><use xlink:href="#lnr-inbox"></use></svg>
-                    <p class="text">Voluptate ex irure</p>
-                    <p class="text-secondary">Voluptate ex irure ipsum ipsum ullamco ipsum reprehenderit non ut mollit commodo.</p>
+                    <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-paperclip my-3"><use xlink:href="#lnr-paperclip"></use></svg>
+                        <p class="text">Ex cupiatat eu</p>
+                        <p class="text-secondary">Ex cupidatat eu official consequat incididunt labore occaecat ut veniam labore et cillum id et.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-screen my-3"><use xlink:href="#lnr-screen"></use></svg>
+                        <p class="text">Tempor aute occaecat</p>
+                        <p class="text-secondary">Tempor aute occaecat pariatur esse aute amet.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6"><svg class="icon-view lnr-inbox my-3"><use xlink:href="#lnr-inbox"></use></svg>
+                        <p class="text">Voluptate ex irure</p>
+                        <p class="text-secondary">Voluptate ex irure ipsum ipsum ullamco ipsum reprehenderit non ut mollit commodo.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- Photo part-->
 
         <div class="jumbotron jumbotron-fluid d-flex">
-            <div class="container row d-flex">
-                <div class="col-sm-2"></div>
-                <div class="row row-eq-height col-sm-10">
-                    <div class="col-md-4 col-sm-12">
-                        <div class="card bg-white">
-                            <img src="other/photo2.png"alt="Photo2" style="width:100%">
-                            <div class="card-body">
-                                <h5>Ex cupidatat eu</h5>
-                                <p class="text-secondary">Ex cupidatat eu official consequant inclididunt labore occaecat labore et cillum id et.</p>
-                                <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo1">Read More</button>
-                                <div id="demo1" class="collapse">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <div class="container d-flex">
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="row row-eq-height">
+                        <div class="col-md-4 col-sm-12">
+                            <div class="card bg-white">
+                                <img class="img-fluid" src="other/photo2.png"alt="Photo2" >
+                                <div class="card-body">
+                                    <h5>Ex cupidatat eu</h5>
+                                    <p class="text-secondary">Ex cupidatat eu official consequant inclididunt labore occaecat labore et cillum id et.</p>
+                                    <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#demo1">Read More</button>
+                                    <div id="demo1" class="collapse">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12"><div class="card bg-white">
-                            <img src="other/photo3.png" alt="Photo2" style="width:100%">
+                            <img src="other/photo3.png" alt="Photo2" class="img-fluid">
                             <div class="card-body">
                                 <h5>Tempor aute occaecat</h5>
                                 <p class="text-secondary">Tempor aute occaecat pariatur onsequant inclididunt labore esse aute amet.</p>
@@ -136,7 +141,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12"><div class="card bg-white">
-                            <img src="other/photo4.png" alt="Photo2" style="width:100%">
+                            <img src="other/photo4.png" alt="Photo2" class="img-fluid">
                             <div class="card-body">
                                 <h5>Voluptate ex irure</h5>
                                 <p class="text-secondary">Voluptate ex irure ipsum ullamco ipsum reprehenderit non ut mollit commodo</p>
@@ -151,7 +156,7 @@
                     </div>
 
                     <div class="col-md-4 col-sm-12 mt-4"><div class="card bg-white">
-                            <img src="other/photo5.png" alt="Photo2" style="width:100%">
+                            <img src="other/photo5.png" alt="Photo2" class="img-fluid">
                             <div class="card-body">
                                 <h5>Tempor commodo</h5>
                                 <p class="text-secondary">Tempor commodo nostrud ex Lorem occaecat duis occaecat minum.</p>
@@ -165,7 +170,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 mt-4"><div class="card bg-white">
-                            <img src="other/photo6.png" alt="Photo2" style="width:100%">
+                            <img src="other/photo6.png" alt="Photo2" class="img-fluid">
                             <div class="card-body">
                                 <h5>Et fugiat sint occaecat</h5>
                                 <p class="text-secondary">Et fugiat sint occaecat voluptate incididunt anim nostrud ea cillum cillum consequat.</p>
@@ -179,7 +184,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 mt-4"><div class="card bg-white">
-                            <img src="other/photo7.png" alt="Photo2" style="width:100%">
+                            <img src="other/photo7.png" alt="Photo2" class="img-fluid">
                             <div class="card-body">
                                 <h5>Et labore tempor et</h5>
                                 <p class="text-secondary">Et labore tempor et adipisicing dolor ea incididunt anim nostrud</p>
@@ -205,34 +210,36 @@
         <!--Part 7-->
 
         <div class="jumbotron jumbotron-fluid ">
-            <div class="container row d-flex">
-                <div class="col-sm-2"></div>
-                <div class="row col-sm-10">
-                    <div class="col-md-4 col-sm-12">
-                        <ul class="list-group ">
-                            <li class="list-group "><h4>Bootstrap 101</h4></li>
-                            <li class="list-group">hello@bootsrtap101.com</li>
-                            <li class="list-group pb-2">+00 123 456 789</li>
-                            <li class="list-group text-secondary">Laborum aute enim consectetur eu laboris commodo.</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 col-sm-12">
-                        <ul class="list-group">
-                            <li class="list-group"><h4>Pages</h4>
-                                <li class="list-group text-secondary pb-1">Nisi in commodo</li>
-                                <li class="list-group text-secondary pb-1">reprehenderit</li>
-                                <li class="list-group text-secondary pb-1">Nostrud</li>
-                                <li class="list-group text-secondary pb-1">Et eu eu</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 col-sm-12">
-                        <ul class="list-group">
-                            <li class="list-group"><h4>Favourites</h4></li>
-                            <li class="list-group text-secondary pb-1">Minim labore nulla</li>
-                            <li class="list-group text-secondary pb-1">Nulla qui nisi</li>
-                            <li class="list-group text-secondary pb-1">Iris Vor Arnim</li>
-                            <li class="list-group text-secondary pb-1">Consectetur cupidata</li>
-                        </ul>
+            <div class="container d-flex">
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12">
+                            <ul class="list-group ">
+                                <li class="list-group "><h4>Bootstrap 101</h4></li>
+                                <li class="list-group">hello@bootsrtap101.com</li>
+                                <li class="list-group pb-2">+00 123 456 789</li>
+                                <li class="list-group text-secondary">Laborum aute enim consectetur eu laboris commodo.</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4 col-sm-12">
+                            <ul class="list-group">
+                                <li class="list-group"><h4>Pages</h4>
+                                    <li class="list-group text-secondary pb-1">Nisi in commodo</li>
+                                    <li class="list-group text-secondary pb-1">reprehenderit</li>
+                                    <li class="list-group text-secondary pb-1">Nostrud</li>
+                                    <li class="list-group text-secondary pb-1">Et eu eu</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4 col-sm-12">
+                            <ul class="list-group">
+                                <li class="list-group"><h4>Favourites</h4></li>
+                                <li class="list-group text-secondary pb-1">Minim labore nulla</li>
+                                <li class="list-group text-secondary pb-1">Nulla qui nisi</li>
+                                <li class="list-group text-secondary pb-1">Iris Vor Arnim</li>
+                                <li class="list-group text-secondary pb-1">Consectetur cupidata</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -253,3 +260,4 @@
 
     </body>
 </html>
+
