--- a/Armine_Gevorgyan/2019.05.03/index.html
+++ b/Armine_Gevorgyan/2019.05.03/index.html
@@ -106,7 +106,7 @@
                                  <img class="card-img-top" src="images/2.jpg" alt="Card image" >
                                  <div class="card-body">
                                      <h4 class="card-title"> Tempor aute occaecat </h4>
-                                     < class="card-text text-secondary"> Some Johntect  coe is an architect and engineer is an architect an is an architect anis an architec.</p>
+                                     <p class="card-text text-secondary"> Some Johntect  coe is an architect and engineer is an architect an is an architect anis an architec.</p>
                                      <div id="demo2" class="collapse  text-secondary">
 					    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 					    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
