-Author Anahit Exam changes

--- a/Anahit_Karyan/Exams/HTML-CSS-Bootstrap/index.html
+++ b/Anahit_Karyan/Exams/HTML-CSS-Bootstrap/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,111 +7,240 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="./Styles/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container-flued shadow-lg">
-	<div class="container">
-        	<nav class="navbar nav-pills nav-fill">
-            	<a class="navbar-brand text-dark" href="#">
-			<img src="logo.png" width="50" height="50" class="d-inline-block align-center" alt="">
-			<div class="d-inline">
-				<h2 class="d-inline font-weight-bold"> REBTAL </h2>
-				<p class=" text-secondary">HOME SOLUTION </p>
+		<div class="container">
+	        <nav class="navbar nav-pills nav-fill">
+	            <a class="navbar-brand text-dark" href="#">
+				<img src="./Resurses/logo.png" width="50" height="50" class="d-inline-block align-center" alt="">
+				<div class="d-inline">
+					<h2 class="d-inline font-weight-bold"> RENTAL </h2>
+					<p class=" text-secondary">HOME SOLUTION </p>
+				</div>
+		    	</a>
+	            <ul class="nav nav-pills nav-fill ">
+	                <li class="nav-item">
+	                    <a class="nav-link text-secondary" href="#">Home</a>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link text-secondary" href="#">About</a>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link text-secondary" href="#">Properties</a>
+	                </li>
+	                <li class="nav-item">
+	                    <a class="nav-link  text-secondary" href="#">Blog</a>
+	                </li>
+		   		    <li class="nav-item dropdown">
+	    				<a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Pages
+	    				</a>
+	    				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	 			     		<a class="dropdown-item" href="#">Single Blog</a>
+	  		   	     		<a class="dropdown-item" href="#">Elements</a>
+						</div>
+	 		    	</li>
+		     		<li class="nav-item">
+	                    <a class="nav-link text-secondary" href="#">Contact Us</a>
+	                </li>
+	            </ul>
+				<button class="btn navbar-btn btn-warning text-white">Submit Proparty</button>
+			</nav>
+	    </div>	
+	</div>
+    <div class="container d-flex  p-4">
+    	<div class="bg-warning rounded-circle text-white w-10 d-inline-flex 
+    	align-self-center align-items-center p-2 "
+        style=" position: absolute; 
+        		z-index:1;
+        		border: 10px solid #fff;
+        		margin: 60% 75% 40% 35%;
+        	   font-size: 5em; ">
+    		  > 
+    	</div>
+    	<div class="row" style="z-index: -1; position: relative;">
+			<div class="col-6" >
+				<h6 class=" text-secondary font-weight-bold mt-50"> BEATIFUL INVESTMENS</h6>
+				<h1 class=" text-dark font-weight-bold"> 
+					Everyyone Deserveses the Opportunity of the Hiome 
+                </h1>
+			     <p class=" text-secondary">
+			     	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
+			     </p>
+				<button class="btn btn-lg  btn-warning text-white margin-bottom-20"> Button </button>
 			</div>
-	    	</a>
-                <ul class="nav nav-pills nav-fill ">
-                    <li class="nav-item">
-                         <a class="nav-link text-secondary" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="#">Properties</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link  text-secondary" href="#">Blog</a>
-                    </li>
-		    <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Pages
-        		</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-     			     <a class="dropdown-item" href="#">Single Blog</a>
-      		   	     <a class="dropdown-item" href="#">Elements</a>
+	 		<div class="col-6">
+	 			<div class="bg-div view"> </div>
+     		</div>
+		</div>
+	</div>
+
+	<div class="container-flued bg-mindle " style="margin-top: 150px;">
+		<div d-flex justify-content-between>
+			<div   class="d-inline-block "  style=" position: absolute; 
+	        		z-index:1;
+	        		width: 50%;">
+				 <img src="./Resurses/dev.jpg" alt="Cinque Terre" width="100%" height="400px">
 			</div>
-     		    </li>
-		     <li class="nav-item">
-                        <a class="nav-link text-secondary" href="#">Contact Us</a>
-                    </li>
-
-                </ul>
-		<button class="btn navbar-btn btn-warning text-white">Button</button>
-		</nav>
-           </div>	
-	</div>
-          <div class="container">
-	       <div class="row ">
-		<div class="col-6 ">
-			
-			<h6 class=" text-secondary font-weight-bold mt-50"> BEATIFUL INVESTMENS</h6>
-			<h1 class=" text-dark font-weight-bold">Everyyone Deserveses the Opportunity of the Hiome </h1>
-		        <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-			<button class="btn btn-lg  btn-warning text-white">Button</button>
-			
-		<span class="badge badge-pill badge-warning rounded-circle mr-auto" width="500" height="500" > > </span>
+			<div width="80%"  class="d-inline-block bg-light" style=" position: relative; z-index: 0;  margin-top: 100px; margin-left: 40%; padding: 50px 100px 50px 200px;">
+					<h1 class="font-weight-bold"> Living From <br> The Team That Cares </h1>
+					<hr width="50" height="5" class="bg-warning ">
+					<p class=" text-secondary">
+				     	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
+				     </p>
+					<ul class=" d-inline text-secondary">
+		                <li> 
+		                	<i class="fa fa fa-heart w-20 text-warning"> </i>
+		                	Lorem Ipsum is simply dummy text of the printing 
+		                 </li>
+		                 <li> 
+		                	<i class="fa fa fa-rocket  w-20 text-warning"> </i>
+		                	Lorem Ipsum is simply dummy text of the printing 
+		                 </li>
+		                  <li> 
+		                	<i class="fa fa fa-paperclip w-20 text-warning"> </i>
+		                	Lorem Ipsum is simply dummy text of the printing 
+		                 </li>
+		            </ul>
+		            <button class="btn n btn-warning text-white " style="margin-top: 30px;">Read M ore </button>
+			</div>
+	    </div>
+		<div class="container">
+			<h1 class="font-weight-bold text-white"> Our Passion is <br> People What’s <br>Yours? </h1>
+			<hr width="50" height="5" class="bg-warning ">
+			<div class="row hover">
+				<div class="col"> 
+					<div class="card darck-card text-white text-center bg-dark " >
+						<img class="card-img-top text-white" src="./Resurses/photo1.png" alt="Card image cap" width="10px" >
+					    <div class="card-body">
+						    <h5 class="card-title font-weight-bold">Creative Design</h5>
+						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						    <a href="#" class="text-white">Read More-> </a>
+					    </div>
+					</div>
+			    </div>
+			    <div class="col"> 
+					<div class="card darck-card text-white text-center bg-dark " >
+						<img class="card-img-top text-white" src="./Resurses/photo2.png" alt="Card image cap" width="10px" >
+					    <div class="card-body">
+						    <h5 class="card-title font-weight-bold">Experience Style</h5>
+						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						    <a href="#" class="text-white">Read More-> </a>
+					    </div>
+					</div>
+			    </div>
+			    <div class="col"> 
+					<div class="card darck-card text-white text-center bg-dark " >
+						<img class="card-img-top text-white" src="./Resurses/photo3.png" alt="Card image cap" width="10px" >
+					    <div class="card-body">
+						    <h5 class="card-title font-weight-bold">Product Research</h5>
+						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						    <a href="#" class="text-white">Read More-> </a>
+					    </div>
+					</div>
+			    </div>
+			    <div class="col"> 
+					<div class="card darck-card text-white text-center bg-dark ">
+						<img class="card-img-top text-white" src="./Resurses/photo4.png" alt="Card image cap" width="10px" >
+					    <div class="card-body">
+						    <h5 class="card-title font-weight-bold">Affordable Price</h5>
+						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						    <a href="#" class="text-white">Read More-> </a>
+					    </div>
+					</div>
+				</div>
+			</div>
 		</div>
-		 <div class="col-6">
-			<img src="img.jpg" class="rounded-circle" width="1000" height="1000" alt="Cinque Terre">
-                </div>
-	</div>
-     </div>
-	<div class="container-flued">
-		<div width="1000" height="1000" class="d-inline">
-			 <img src="dev.jpg" alt="Cinque Terre">
-		</div>
-		<div width="1000" height="1300" class="bg-secandary d-inline-block" >
-			<h1> Living From <br> The Team That Cares </h1>
-			<hr width="50" height="5" class="bg-warning ml-auto">
-		<ul class=" d-inline">
-                    <li> Lorem Ipsum is simply dummy text of the printing and  </li>
-                    <li> Lorem Ipsum is simply dummy text of the printing and  </li>
-                    <li> Lorem Ipsum is simply dummy text of the printing and  </li>
-                </ul>
-	
-                </div>
 
 	</div>
-    
-
-
-	<footer class="page-footer font-small bg-dark pt-4">
-
-  	<div class="container text-center ">
+	<div class="container p-4">
+		<h1 class="font-weight-bold"> Provide The <br> Beautiful Apartment</h1>
+		<hr width="100" height="10" class="bg-warning ">
 		<div class="row">
-		<div class="col">
-		   <h2 class="text-white"> About Us </h2>
-		   <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>	
-		</div>
-		<div class="col">
-                   <h2 class="text-white"> Contact Info </h2>
-                   <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>   
-                </div>
-		<div class="col">
-                   <h2 class="text-white"> Important Link </h2>
-                   <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>   
-                </div>
-		<div class="col">
-                   <h2 class="text-white"> Newsleter </h2>
-                   <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>   
-                </div>
+			<div class="col"> 
+				<div class="card ">
+					<img class="card-img-top " src="./Resurses/card1.jpeg" alt="Card image cap" width="100px" height="300px">
+				    <div class="card-body">
+					    <p class="card-text text-warning">Home, Apartment</p>
+					    <h3 class="card-title font-weight-bold">	Detached House For Sale
+					    </h3>
+					    <hr class="text-secondary text-center w-80">
+					    <p> <i class="fa fa fa-rocket text-secondary"> </i>04 03 <br> 2400 sqrt</p>
+				    </div>
+				</div>
+			</div>
+			<div class="col"> 
+				<div class="card ">
+					<img class="card-img-top " src="./Resurses/card2.jpeg" alt="Card image cap" width="100px" height="300px">
+				    <div class="card-body">
+					    <p class="card-text text-warning">Home, Apartment</p>
+					    <h3 class="card-title font-weight-bold">	Detached House For Sale
+					    </h3>
+					    <hr class="text-secondary text-center w-80">
+					    <p> <i class="fa fa fa-rocket text-secondary"> </i>04 03 <br> 2400 sqrt</p>
+				    </div>
+				</div>
+			</div>
+			<div class="col"> 
+				<div class="card ">
+					<img class="card-img-top " src="./Resurses/card3.jpeg" alt="Card image cap" width="100px" height="300px">
+				    <div class="card-body">
+					    <p class="card-text text-warning">Home, Apartment</p>
+					    <h3 class="card-title font-weight-bold">	Detached House For Sale
+					    </h3>
+					    <hr class="text-secondary text-center w-80">
+					    <p> <i class="fa fa fa-rocket text-secondary"> </i>04 03 <br> 2400 sqrt</p>
+				    </div>
+				</div>
+			</div>
+	</div>	
+	</div>
 
-		</div>
+	<div class="container-flued bg-info text-white text-center p-4">
+    	<h1 style="margin-top: 100px;"> Are You Ready For Move? </h1>
+    	<p><small> Lights had saw moving saw female blessed</small></p>
+    	<button class="btn btn-outline-warning text-white sign" > Sing Up</button>
+    </div>
+	<footer class="page-footer  bg-dark " style="margin-top: 150px;">
+	  	<div class="container text-center ">
+			<div class="row">
+				<div class="col">
+				    <h2 class="text-white text-left"> About Us </h2>
+				    <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>	
+				    <img src="./Resurses/logo.png" width="50" height="50" class="d-inline-block align-center" alt="">
+				<div class="d-inline">
+					<h2 class="d-inline font-weight-bold text-warning"> RENTAL </h2>
+					<p class=" text-white">HOME SOLUTION </p>
+				</div>
+				</div>
+				<div class="col">
+                	<h2 class="text-white text-left"> Contact Info </h2>
+                    <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>   
+                </div>
+				<div class="col">
+		            <h2 class="text-white text-left"> Important Link </h2>
+		            <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>   
+		                </div>
+				<div class="col">
+		            <h2 class="text-white text-left"> Newsleter </h2>
+		            <p class=" text-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has </p>   
+
+		            <div class="col-auto">
+				    	<label class="sr-only" for="inlineFormInputGroup">Email Adress</label>
+				      	<div class="input-group mb-2"> 
+					        <input type="text" class="form-control email" id="inlineFormInputGroup" placeholder="Email Adress">
+					        <div class="input-group-prepend">
+					        	<div class="input-group-text bg-warning email"> > </div>
+					        </div>
+				        </div>
+				    </div>
+		        </div>
+			</div>
         </div>
-
-
-</footer>
+	</footer>
 </body>
 <html>
