Author : Garik Saghumyan : fixed mistakes

--- a/Garik_Saghumyan/Web/JS/Homework.2019.05.08/index.html
+++ b/Garik_Saghumyan/Web/JS/Homework.2019.05.08/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
 	<div class="container">
-		<textarea id="input" cols="75" rows="10">(({[]}))</textarea>
+		<textarea id="text" cols="75" rows="10">(({[]}))</textarea>
 	</div>
-    <script src="brackets.js"></script>
+    <script src="JS/brackets.js"></script>
 </body>
 </html>
